--- a/31_CRUD/index.html
+++ b/31_CRUD/index.html
@@ -13,29 +13,56 @@
             <table border="1">
                 <tr>
                     <td>Title: </td>
-                    <td><input type="text" id="title"/></td>
+                    <td><input type="text" id="title" /> </td>
                 </tr>
                 <tr>
                     <td>Desc: </td>
-                    <td><input type="text" id="desc"/></td>
+                    <td><input type="text" id="desc" /> </td>
                 </tr>
                 <tr>
                     <td>Price: </td>
-                    <td><input type="number" id="price"/></td>
+                    <td><input type="number" id="price" /> </td>
                 </tr>
                 <tr>
                     <td>Category: </td>
-                    <td><input type="text" id="category"/></td>
+                    <td><input type="text" id="category" /> </td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Add Book"/></td>
+                    <td><input type="submit" value="Add Book" /> </td>
                 </tr>
             </table>
         </form>
     </div>
-    <hr>
+    <div id="edit-book-form" align="center" style="display: none;">
+        <h2>Edit Book Store</h2>
+        <form id="edit-book">
+            <table border="1">
+                <tr>
+                    <td>Title: </td>
+                    <td><input type="text" id="editTitle" /> </td>
+                </tr>
+                <tr>
+                    <td>Desc: </td>
+                    <td><input type="text" id="editDesc" /> </td>
+                </tr>
+                <tr>
+                    <td>Price: </td>
+                    <td><input type="number" id="editPrice" /> </td>
+                </tr>
+                <tr>
+                    <td>Category: </td>
+                    <td><input type="text" id="editCategory" /> </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><input type="submit" value="Edit Book" /> </td>
+                </tr>
+            </table>
+        </form>
+    </div>
 
+    <hr>
     <div align="center" >
         <h2>Book Details</h2>
         <table border="1">
