--- a/project_9/index.html
+++ b/project_9/index.html
@@ -17,7 +17,7 @@
             </a>
             <ul class="list-unstyled d-flex mb-0 order-lg-1 align-items-center">
                 <li>
-                    <button class="border-0 py-2 px-3 rounded" id="product_btn">Add Products</button>
+                    <button class="border-0 py-2 px-3 rounded" id="product_btn" data-bs-toggle="modal" data-bs-target="#productModal">Add Products</button>
                 </li>
                 <li class="mx-4 ms-lg-4">
                     <a href="javascript:void(0)" class="text-decoration-none py-2 px-3 rounded text-black" id="cart_btn">Add to Cart</a>
@@ -50,7 +50,42 @@
         </div>
     </header>
 
-    
+    <!-- Add_to_product_modal -->
+    <div class="modal fade" id="productModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Add New Product</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form class="ProductForm">
+                        <div class="form-group">
+                            <label class="form-label fw-semibold">Product Name:</label>
+                            <input type="text" class="form-control" id="Product_name" placeholder="Enter product name">
+                        </div>
+                        <div class="form-group fw-semibold">
+                            <label class="form-label">Product Image:</label>
+                            <input type="text" class="form-control" id="Product_image" placeholder="Enter product image URL">
+                        </div>
+                        <div class="form-group fw-semibold">
+                            <label class="form-label">Product Price:</label>
+                            <input type="text" class="form-control" id="Product_price" placeholder="Enter product price">
+                        </div>
+                        <div class="form-group fw-semibold">
+                            <label class="form-label">Product Description:</label>
+                            <input type="text" class="form-control" id="Product_description" placeholder="Enter product description">
+                        </div>
+                        <button class="submit-btn border-0" type="submit">Add to Product</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class=" cont col-12">
+
+    </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/project_9.js"></script>
