--- a/project_9/index.html
+++ b/project_9/index.html
@@ -20,7 +20,7 @@
                     <button class="border-0 py-2 px-3 rounded" id="product_btn" data-bs-toggle="modal" data-bs-target="#productModal">Add Products</button>
                 </li>
                 <li class="mx-4 ms-lg-4">
-                    <a href="javascript:void(0)" class="text-decoration-none py-2 px-3 rounded text-black" id="cart_btn">Add to Cart</a>
+                    <a href="cart.html" class="text-decoration-none py-2 px-3 rounded text-black" id="cart_btn">Add to Cart</a>
                 </li>
                 <li>
                     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <div class=" cont col-12">
+    <div class="cont col-12">
 
     </div>
 
