--- a/31_CRUD/index.html
+++ b/31_CRUD/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div id="add-book-form" align="center">
         <h2>Book Store</h2>
         <form id="add-book">
-            <table border="1">
+            <table>
                 <tr>
                     <td>Title: </td>
                     <td><input type="text" id="title" /> </td>
@@ -37,7 +38,7 @@
     <div id="edit-book-form" align="center" style="display: none;">
         <h2>Edit Book Store</h2>
         <form id="edit-book">
-            <table border="1">
+            <table>
                 <tr>
                     <td>Title: </td>
                     <td><input type="text" id="editTitle" /> </td>
@@ -63,9 +64,10 @@
     </div>
 
     <hr>
+    
     <div align="center" >
         <h2>Book Details</h2>
-        <table border="1">
+        <table>
             <thead>
                 <tr>
                     <th>#</th>
